# TaxonoPy

./: .gitignore  .zenodo.json  AGENTS.md  CITATION.cff  README.md  ids.txt  index.html  mkdocs.yml  pyproject.toml  resolved_taxonomies.jsonl
.github/workflows/: deploy-docs.yaml  run-tests.yaml  validate-zenodo.yaml
acknowledgments/: index.html
development/contributing/: index.html
docs/: acknowledgments.md  architecture.md  index.md  prd_draft.md
docs/command_line_usage/: help.md  tutorial.md
docs/development/contributing/: index.md
docs/development/failure_analysis_workflow/: index.md
docs/stylesheets/: extra.css
docs/user-guide/: cache.md  installation.md  quick-reference.md
docs/user-guide/io/: cache.md  index.md  input.md  output.md  reruns.md
examples/input/: sample.csv  sample.parquet
examples/resolved/: resolution_stats.json  sample.resolved.parquet  sample.unsolved.parquet
examples/resolved/common/: sample.resolved.parquet
examples/resolved_with_common_names/: sample.resolved.parquet
pr-19/: 404.html  index.html
pr-19/acknowledgements/: index.html
pr-19/command_line_usage/help/: index.html
pr-19/command_line_usage/tutorial/: index.html
pr-19/search/: search_index.json
pr-19/stylesheets/: extra.css
pr-30/: 404.html  index.html
pr-30/acknowledgments/: index.html
pr-30/search/: search_index.json
pr-32/: 404.html  index.html
pr-32/acknowledgments/: index.html
pr-32/search/: search_index.json
pr-33/: 404.html  index.html  objects.inv
pr-33/_scripts/: gen_cli_help_docs.py
pr-33/acknowledgments/: index.html
pr-33/search/: search_index.json
pr-37/: 404.html  index.html
pr-37/acknowledgments/: index.html
pr-37/search/: search_index.json
scripts/: generate_gnverifier_types.py
scripts/common_names/: resolve_common_name.py
src/taxonopy/: __init__.py  __main__.py  api_service.py  cache_manager.py  cli.py  config.py  constants.py  container_handler.py  data_handler.py  entry_grouper.py  gnverifier_client.py  input_parser.py  manifest.py  matcher.py  output_manager.py  query_executor.py  query_planner.py  resolution_attempt_manager.py  resolution_manager.py  resolve_common_names.py  resolver.py  stats_collector.py  taxonomy_resolver.py  utils.py
tests/: test_cache_manager.py  test_full_rerun.py  test_output_manager.py  test_resolve_common_names.py
user-guide/installation/: index.html
(+92 files in other folders)
