[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taxonopy"
version = "0.1.0"
description = "A Python package for resolving taxonomic hierarchies using the Global Names Resolver API."
authors = [{name = "Matthew J. Thompson", email = "thompson.m.j@outlook.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests", 
    "docopt-ng >= 0.9.0",
    "tqdm"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "uncoil @ git+ssh://git@github.com/thompsonmj/uncoil.git@v1.0.1"
]

[project.scripts]
taxonopy = "taxonopy.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

# [tool.hatch.version]
# enabled = true
