[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taxonopy"
description = "A Python package for resolving taxonomic hierarchies using the Global Names Verifier API."
authors = [{name = "Matthew J. Thompson", email = "thompson.m.j@outlook.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests", 
    "tqdm",
    "polars",
    "pyarrow",
    "pydantic"
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "datamodel-code-generator",
    "pre-commit"
    ]
nb = [
    "ipykernel",
    "jupyterlab",
    "marimo[recommended]"
]

[project.scripts]
taxonopy = "taxonopy.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "src/taxonopy/__init__.py"
